<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_film_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/average_rating"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_film_rating_star"
            app:layout_constraintStart_toEndOf="@+id/detail_film_rating_star"
            app:layout_constraintTop_toTopOf="@+id/detail_film_rating_star"
            tools:text="@string/average_rating" />

        <ImageView
            android:id="@+id/detail_film_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/colorPrimaryLight"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/detail_film_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/favorite_btn"
            app:layout_constraintStart_toStartOf="@+id/detail_film_rating_star"
            app:layout_constraintTop_toBottomOf="@+id/detail_film_rating_star"
            tools:text="Movie Name" />

        <TextView
            android:id="@+id/detail_film_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/synopsis"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/detail_film_rating_star"
            app:layout_constraintTop_toBottomOf="@+id/release_date"
            tools:text="@string/synopsis" />

        <TextView
            android:id="@+id/detail_film_rating_star"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/icons8_star"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_film_image"
            tools:text="7.5" />

        <TextView
            android:id="@+id/detail_film_synopsis_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/favorite_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/detail_film_synopsis"
            app:layout_constraintTop_toBottomOf="@+id/detail_film_synopsis"
            tools:text="Synopsis body text goes here, content needs to be able to wrap the screen properly" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/release_date"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/detail_film_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_film_title" />

        <TextView
            android:id="@+id/release_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="12.2.15"
            app:layout_constraintBottom_toBottomOf="@+id/release_date"
            app:layout_constraintStart_toEndOf="@+id/release_date"
            app:layout_constraintTop_toTopOf="@+id/release_date" />

        <ImageView
            android:id="@+id/favorite_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_film_rating_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_film_rating_star"
            tools:background="@drawable/ic_baseline_favorite_border_24px" />

        <TextView
            android:id="@+id/favorite_btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_to_fav"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/favorite_btn"
            app:layout_constraintEnd_toStartOf="@+id/favorite_btn"
            app:layout_constraintTop_toTopOf="@+id/favorite_btn" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
